--- a/WebLegemClient/src/app/login/login.tmpl.html
+++ b/WebLegemClient/src/app/login/login.tmpl.html
@@ -17,7 +17,7 @@
             <div class="box_input_ico inputs_login">
                 <div >
                     <input required name="usuario" class="input_text_ico" id="user" type="text" ng-model="vm.user.nombre"
-                           placeholder="{{vm.language.strings.NombreUsuario}}" />
+                           placeholder="{{vm.language.strings.NombreUsuarioI}}" />
                 </div>
                 <div class="ico_input_text">
                     <span class=" ico-user"></span>
