--- a/WebLegemClient/src/app/usuarios/control-usuarios/control-usuarios.tmpl.html
+++ b/WebLegemClient/src/app/usuarios/control-usuarios/control-usuarios.tmpl.html
@@ -5,8 +5,11 @@
         <wl-lista-usuarios lista="vm.usuarios"
                            objeto-seleccionado="vm.usuarioSeleccionado"
                            seleccionar="vm.seleccionar"
-                           editando="vm.editando">
+                           editando="vm.editando"
+                           procesando="vm.procesando"
+                           error="vm.error">
         </wl-lista-usuarios>
+        <div id="wl-lista" class=" load_list"></div>
     </div>
 
 
@@ -15,7 +18,10 @@
         <wl-admin-crud objeto-seleccionado="vm.usuarioSeleccionado"
                        editando="vm.editando"
                        nuevo="vm.nuevo"
-                       eliminar="vm.remover">
+                       eliminar="vm.remover"
+                       procesando="vm.procesando"
+                       foco="nombre-persona"
+                       error="vm.error">
         </wl-admin-crud>
 
         <wl-fotografia show="vm.camaraToggle"></wl-fotografia>
@@ -53,7 +59,7 @@
                 <div>
                     <div>
                         <p class="texto_labels ">{{vm.language.strings.Nombres}}</p>
-                        <input class="a_input" ng-model="vm.usuarioSeleccionado.nombre"
+                        <input id="nombre-persona" class="a_input" ng-model="vm.usuarioSeleccionado.nombre"
                                ng-class="!vm.editando ? 'disable': ''" required name="nombre" />
 
                         <div ng-show="vm.form_usuario.nombre.$invalid && vm.form_usuario.nombre.$dirty">
