--- a/WebLegemClient/src/app/gestion-documental/documento/crear-documento.tmpl.html
+++ b/WebLegemClient/src/app/gestion-documental/documento/crear-documento.tmpl.html
@@ -1,7 +1,7 @@
 ﻿<div class="tapiz">
     <div class="espacio_blanco"></div>
+    <wl-titulo-nav class="container_navigation"></wl-titulo-nav>
     <div class="tapiz_contenido">
-
 
         <div class="contenedor_tabs">
             <ul>
@@ -12,7 +12,6 @@
                 </li>
             </ul>
         </div>
-        <!--<p>{{ vm.paso }}</p> creo que esto no sirve -->
-        <div ui-view></div>
+        <div ui-view style="flex:1; height: 100%; display: flex; -ms-flex-direction: column; -webkit-flex-direction: column; flex-direction: column;" ></div>
     </div>
 </div>
