--- a/WebLegemClient/src/css/plantillas/gestion_documental.css
+++ b/WebLegemClient/src/css/plantillas/gestion_documental.css
@@ -1,24 +1,16 @@
-﻿.contenedor_uploader_gd{
-    display:flex;
-    flex-direction:column;
-    justify-content:center;
+﻿.contenedor_uploader_gd {
+    display: flex;
+    -ms-flex-direction: column;
+    -webkit-flex-direction: column;
+    flex-direction: column;
+    justify-content: center;
+    width: 90%;
 }
 
 .view_gestion_documental{
     width:100%;
     display:flex;
     justify-content:center;
-}
-
-.contenido_gd{
-    background:white;
-    width:90%;
-    margin:10px 0;
-    box-shadow:0 0 0 1px rgba(0, 0, 0, 0.05),0 1px 2px rgba(0, 0, 0, 0.3);
-}
-
-.box-contenido-gd{
-    padding:20px;
 }
 
 .tontera {
@@ -34,3 +26,14 @@
 .tontera ng-quill-editor{
     background:red; 
 }
+
+.contenedor-subir-documento {
+    -ms-flex: 1;
+    -webkit-flex: 1;
+    flex: 1;
+    display: flex;
+    -ms-flex-direction: column;
+    -webkit-flex-direction: column;
+    flex-direction: column;
+}
+
