--- a/WebLegemClient/src/css/plantillas/layout_general.css
+++ b/WebLegemClient/src/css/plantillas/layout_general.css
@@ -47,9 +47,9 @@
         margin-bottom: 10px;
     }
 
-    .flex-1{flex:1!important}
-    .flex-2{flex:2!important}
-    .flex-3{flex:3!important}
+    .flex-1{-ms-flex:1!important -webkit-flex:1!important flex:1!important}
+    .flex-2{-ms-flex:2!important -webkit-flex:2!important flex:2!important}
+    .flex-3{-ms-flex:3!important -webkit-flex:3!important flex:3!important}
 
 .tapiz {
     display: flex;
@@ -65,15 +65,18 @@
     /*background-color:#e9eaed;*/ /*azul facebook*/
 }
 
-    .tapiz_contenido{/*responsive*/
-        background:#fff;
-        box-shadow:0 0 0 1px rgba(0, 0, 0, 0.05),0 1px 2px rgba(0, 0, 0, 0.3);
-        width:90%;
-        margin-bottom:20px;
-        min-height:80vh;
-    }
+.tapiz_contenido { /*responsive*/
+    background: #fff;
+    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05),0 1px 2px rgba(0, 0, 0, 0.3);
+    width: 90%;
+    margin-bottom: 20px;
+    min-height: 80vh;
+    display: flex;
+    -ms-flex-direction: column;
+    -webkit-flex-direction: column;
+    flex-direction: column;
+}
 
-    
 /* Custom, iPhone Retina */ 
 @media only screen and (max-width : 320px) {/* < 320*/
 
