--- a/WebLegemClient/src/app/usuarios/control-roles/control-roles.tmpl.html
+++ b/WebLegemClient/src/app/usuarios/control-roles/control-roles.tmpl.html
@@ -52,3 +52,18 @@
         </wl-confirmacion>
     </div>
 </div>
+
+<wl-info show="vm.dialogResponse" title="Error" color="verde">
+    <div class='a-modal-contenido'>
+        <div class="generic-box-vertical">
+            <div class="generic-box-horizontal center">
+                <label class="texto_labels">{{vm.responseMessage}}</label>
+            </div>
+            <div class="generic-box-horizontal flex-1 center" style="margin-top:15px;">
+                <button class="btn_sin_ico" ng-click="vm.dialogResponse=false">
+                    Aceptar
+                </button>
+            </div>
+        </div>
+    </div>
+</wl-info>
