--- a/WebLegemClient/src/app/gestion-documental/documento/subir-archivo.tmpl.html
+++ b/WebLegemClient/src/app/gestion-documental/documento/subir-archivo.tmpl.html
@@ -1,5 +1,5 @@
-﻿<div class="contenedor-subir-documento">
-    <div class="box_father animatio ng-enter" ng-controller="uploaderController as an">
+﻿<div class="contenedor-subir-documento" ng-controller="uploaderController as an">
+    <div class="box_father animatio ng-enter">
         <div class="box_right">
 
             <label class="texto_labels">
@@ -17,9 +17,10 @@
                         <label id="fileSize"></label>
                         <label id="fileType"></label>
 
-                        <input type="file" id="files" name="documento" accept="*/*" nv-file-select nv-file-drop uploader="vm.uploader" />
+                        <input type="file" id="files" name="documento" accept=".pdf,.doc,.docx" nv-file-select nv-file-drop uploader="vm.uploader"
+                               ewl wl-change="vm.validarArchivo();" />
 
-                        <button id="cancelar_lectura" type="button" class="btn_con_ico" ng-click="an.abortRead()">
+                        <button ng-show="false" id="cancelar_lectura" type="button" class="btn_con_ico" ng-click="an.abortRead()">
                             <!--ng-click="vm.uploader.uploadAll()"-->
                             <span class="ico-times tamano_botones_1"></span>{{vm.language.strings.Cancelar}}
                         </button>
@@ -29,13 +30,13 @@
                 </form>
             </div>
 
-            <div ng-show="vm.errorType" class="generic-box-horizontal a_centrado">
+            <div ng-show="vm.formatError" class="generic-box-horizontal a_centrado">
                 <div class="msj-error">{{vm.language.strings.TipoArchivoNoSoportado}}</div>
             </div>
-            <div ng-show="vm.existDocument" class="generic-box-horizontal a_centrado" >
+            <div ng-show="!vm.existDocument && vm.errorLoad " class="generic-box-horizontal a_centrado">
                 <div class="msj-error">{{vm.language.strings.SeleccioneArchivo}}</div>
             </div>
-
+            
         </div>
     </div>
 
@@ -47,9 +48,9 @@
             <div class="divisor-pasos"><div></div></div>
             <div class="controles-crear-anotacion">
                 <button class="btn_con_ico inverso"
-                        ng-click="vm.validarArchivo();">
+                        ng-click="vm.siguiente();">
                     {{vm.language.strings.Siguiente}}<span class="ico-chevron-right tamano_botones_1 derecha"></span>
-                </button>               
+                </button>
             </div>
         </div>
     </div>
