--- a/WebLegemClient/src/app/administracion/tipo-entidad/tipos-entidad.tmpl.html
+++ b/WebLegemClient/src/app/administracion/tipo-entidad/tipos-entidad.tmpl.html
@@ -5,7 +5,8 @@
                                   objeto="vm.tipoEntidadSeleccionado"
                                   editando="vm.editando"
                                   procesando="vm.procesando"
-                                  error="vm.error">
+                                  error="vm.error"
+                                  actualizar="vm.actualizar">
         </wl-lista-tipos-entidades>
         <div id="wl-lista" class=" load_list"></div>
     </div>
