--- a/WebLegemClient/src/app/auditoria/control-usuarios/control-usuarios.tmpl.html
+++ b/WebLegemClient/src/app/auditoria/control-usuarios/control-usuarios.tmpl.html
@@ -54,7 +54,7 @@
                 <div class="box_fotografia">
                     <div class="foto_usuarios">
                         <span class="ico-user" ng-show="!vm.trash"></span>
-                        <img src="" id="laimagen" ewl wl-load="vm.mostrarFoto();" />
+                        <img alt="{{vm.language.strings.FotografiaUsuario}}" src="" id="laimagen" ewl wl-load="vm.mostrarFoto();" />
                         <input type="file" id="input_usu_foto"
                                 ng-disabled="!vm.editando" />
                         <input type="hidden" id="hidden_input" name="filename" />
