--- a/WebLegemClient/src/app/usuarios/cuenta/cuenta.tmpl.html
+++ b/WebLegemClient/src/app/usuarios/cuenta/cuenta.tmpl.html
@@ -18,7 +18,7 @@
                             <div class="box_fotografia">
                                 <div class="foto_usuarios">
                                     <span class="ico-user" ng-show="!vm.trash"></span>
-                                    <img src="" id="laimagen" ewl wl-load="vm.mostrarFoto();" />
+                                    <img alt="{{vm.language.strings.FotrografiaUsuario}}" src="" id="laimagen" ewl wl-load="vm.mostrarFoto();" />
                                     <input type="file" id="input_usu_foto" />
                                     <input type="hidden" id="hidden_input" name="filename" />
                                 </div>
