--- a/WebLegemClient/src/app/administracion/tipo-documento/tipo-documento.tmpl.html
+++ b/WebLegemClient/src/app/administracion/tipo-documento/tipo-documento.tmpl.html
@@ -5,7 +5,8 @@
                            objeto-seleccionado="vm.tipoDocSeleccionado"
                            editando="vm.editando"
                            procesando="vm.procesando"
-                           error="vm.error">
+                           error="vm.error"
+                           actualizar="vm.actualizar">
         </wl-lista-tipo-doc>
         <div id="wl-lista" class=" load_list"></div>
     </div>
